tests/fixtures/invalid/none_div_bytes.py
# Cannot divide None and Bytes
x: float = None / b"hello"
